# Custom-GPTs

./: .gitignore  README.md  VCMO - LeanDog - Emily Parker.docx
Assets/: About Amy Koran - CXO.txt  About Emily Parker - VCMO.md  About Jeff Dunay - Director of Talent.md  About Jon Stahl - CEO.md  About Julias Shaw - CTO.md  About Julias Shaw - CTO.txt  LeanDog Website - About.md  LeanDog Website - Agile Resources.md  LeanDog Website - Agile Services.md  LeanDog Website - Blog.md  LeanDog Website - Blog.txt  LeanDog Website - Why Agile.txt
LeanDog - Intelligent Engineering with AI/: README.md  (+1 more)
LeanDog - Intelligent Engineering with AI/Project/trello-extract/: .env.local  .gitignore  README.md  pyproject.toml  trello_integration.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/: conftest.py  functions.py  settings.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/clients/: trello_client.py  trello_client_test.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/dataclasses/: categorized_list.py  trello_card.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/formatters/: escape_markdown.py  escape_markdown_test.py  generate_markdown.py  generate_markdown_test.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/orchestrators/: orchestration_service.py  orchestration_service_test.py
LeanDog - Intelligent Engineering with AI/Project/trello-extract/src/services/: trello_service.py  trello_service_test.py  trello_utilities.py
(+90 files in other folders)
